# SynKGR

./: .gitignore  README.md  Readme.md  pyproject.toml
LLM_Discriminator/: discriminator.py  finetune.py  kopa.py  process_kge.py  test_finetuned_llm.py  test_kge.py  test_with_discriminator.py  train_kge.py
MCTS/: base_discriminator.py  data_preview.py  kg_data_loader.py  kg_enhancer.py  kgbert_discriminator.py  kge_discriminator.py  mcts_tree.py  node.py  preprocess.py  process_checkpoints.py  random_discriminator.py  rollout_policy.py  run_mcts.py  score_auxiliary_confidence.py  score_auxiliary_confidence_kgbert.py  utils.py
data/: data_preview.py  n-n.py  run_embedding.py
data/CoDEx-S/: relation2name.txt
data/FB15k-237N/: 1-1.txt  1-n.txt  entity2id.txt  entity2name.txt  n-1.txt  n-n.txt  relation2id.txt  (+2 more)
kg-bert/: README.md  convert_data.py  run_bert_triple_classifier.py
loss_restraint_KGE_model/: compgcn_conv.py  compgcn_conv_adapt.py  compgcn_conv_basis.py  data_loader.py  helper.py  message_passing.py  metrics_collector.py  models.py  plot_entity_type_test.py  run.py  visualize_suppression.py
openke/: preprocess_for_openke.py  readme.md
scripts/: preprocess_for_openke.py  preprocess_mcts.sh  run_embedding.sh  run_finetune_codex.sh  run_finetune_fb15k237n.sh  run_mcts.sh  test_case_study.sh  test_entity_degree.sh  test_finetuned_llm.sh  test_kgbert_triple_classifier.sh  test_kge.sh  test_relation_type.sh  train_kgbert_triple_classifier.sh  train_kge.sh  train_loss_restrain_kge.sh  visualize_suppression.sh
tests/: relation_type.py  tester.py
