[project]
name = "synkgr"
version = "0.1.0"
description = "SynKGR: Synthetic Knowledge Graph Reasoning with Discrimination"
readme = "README.md"
requires-python = "==3.10.*"
dependencies = [
    "torch==2.4.0",
    "ordered_set==4.1.0",
    "numpy==1.26.4",
    "torch_scatter==2.1.2",
    "scikit_learn==1.4.1.post1",
    "accelerate>=0.30.0",
    "appdirs==1.4.4",
    "datasets==2.18.0",
    "fire==0.6.0",
    "transformers>=4.41.0",
    "sentencepiece==0.2.0",
    "peft>=0.10.0",
    "torch_geometric==2.6.1",
    "sentence-transformers>=2.6.0",
    "httpx[socks]>=0.28.1",
]

[tool.uv.sources]
torch = { index = "pytorch-cu124" }
torch_scatter = { url = "https://data.pyg.org/whl/torch-2.4.0+cu124/torch_scatter-2.1.2+pt24cu124-cp310-cp310-linux_x86_64.whl" }

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
